Fix overlapping glitches on mobile and some beauty stuff. ref habari/habari#596

--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -1178,9 +1178,21 @@ li.tag.selected {
   .page-tags #tags {
     flex-direction: column;
   }
+  #tags .facet_ui {
+    order: 1;
+  }
+  #tag_collection {
+    order: 2;
+  }
   .tag_controls {
+    flex: 0 1 auto; /* Revert to default because on mobile it's column layout */
+    order: 3;
     border-right: none;
-    border-bottom: 2px solid #999;
+    border-top: 2px solid #999;
+    padding-right: 0;
+    padding-top: 10px;
+    margin-right: 0;
+    margin-top: 10px;
   }
 }
 
